# cuddly-tribble

./: .gitignore  10_lambda_practice_contd.py  README.md  css-practice.css  pdf-comment-extract.py  pyproject.toml  style.css  test.js  test.py  zshrc.md
advent-of-code-2024/day-1/: script.py
advent-of-code-2024/day-2/: script.py  test.py
advent-of-code-2024/day-3/: part2.py  script.py
advent-of-code-2024/day-4/: script.py
cpp/test.cpp/: test  test.ilk
data-science-ml/notes/: 01_Data_Science_Basics.md  02_SQL_Foundations.md  03_SQL_Queries.md  06_Python_Fundamentals.md  08_np_pd_intro.ipynb  10_lambda_practice_contd.py  11_aggregates_in_pandas.py  13_exploratory_da.md  (+4 more)
data-science-ml/projects/python/jupyter/: pyproject.toml
data-science-ml/projects/python/jupyter/Python Loops Medical Insurance Estimates vs Costs/: Python Loops Medical Insurance Estimates vs Costs.ipynb
data-science-ml/projects/python/jupyter/coded-correspondence/: coded_correspondence.ipynb  coded_correspondence_solutions.ipynb
data-science-ml/projects/python/jupyter/dictionaries_medical_insurance/: project.ipynb
data-science-ml/projects/python/jupyter/hurricane-project/: project.ipynb  solution.ipynb
data-science-ml/projects/python/jupyter/python-portfolio-project-starter-files/: us-medical-insurance-costs.ipynb
data-science-ml/projects/python/jupyter/reggiess_linear_regression/: project.ipynb  solution.ipynb
data-science-ml/projects/python/jupyter/strings_practice/: strings_practice.ipynb
data-science-ml/projects/python/playground/: 02_lists.py  04_binomial.py  README.md  pyproject.toml  test.py
data-science-ml/projects/python/playground/hurricane-analysis/: project.ipynb
nyc-blog-project/: index.html
pyprojects/: pdfCommentExtract.py  test.py
pyvision/: app.py
test-project/: index.html  script.js  styles.css
(+231 files in other folders)
