[tool.poetry]
name = "cuddly-pyenv"
version = "0.1.0"
description = "Env for the broader git repo"
authors = ["harryw1 <harrisonrweiss1@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
matplotlib = "^3.9.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
