[tool.poetry]
name = "jupyter-notes"
version = "0.1.0"
description = "Package for taking taking and making Jupyter notes"
authors = ["harryw1 <harrisonrweiss1@gmail.com>"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
pandas = "^2.2.3"
pylint = "^3.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
