[tool.poetry]
name = "playground"
version = "0.1.0"
description = "A playground environment for Codeacademy"
authors = ["harryw1 <harrisonrweiss1@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
jupyterlab = "^4.2.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

